# wisent-backend-aspatari

./: .editorconfig  .gitignore  .tmuxp.yaml  Dockerfile  README.md  Wisent.postman_collection.json  docker-compose.yml  env.template  main.py  pyproject.toml
apps/clients/: __init__.py  application.py  model.py  service.py
apps/clients/handlers/: __init__.py  client_create.py  client_detail.py  client_list.py  client_list_create.py
apps/clients/serializers/: __init__.py  client_create.py  client_detail.py  client_edit.py  client_list.py
apps/posts/: __init__.py  application.py  service.py
apps/posts/handlers/: post_detail.py  post_list.py
apps/socket/: __init__.py  application.py  model.py  service.py
apps/socket/handlers/: __init__.py  socket_input.py
common/: application.py  exception.py  handler.py  types.py
common/models/: __init__.py  base.py  timestamped_model.py  uuid_model.py
core/: application.py  database.py  server.py  settings.py
posts/: exceptions.py  service.py
posts/handlers/: __init__.py  post_detail.py  post_list.py
