[tool.poetry]
name = "wisent-backend-aspatari"
version = "0.1.0"
description = ""
authors = ["Artur Spatari <artur.spatari@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tornado = "^6.0.4"
uvloop = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
devtools = "^0.6"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
